name:                hlrdb
version:             0.1.0.0
synopsis:            High-level Redis Database
description:         A library for type-driven interaction with Redis
license:             MIT
license-file:        LICENSE
author:              Identical Snowflake
maintainer:          identicalsnowflake@protonmail.com
category:            Database
build-type:          Simple
cabal-version:       >=2.0
homepage:            https://github.com/identicalsnowflake/hlrdb
bug-reports:         https://github.com/identicalsnowflake/hlrdb/issues

source-repository head
  type:     git
  location: https://github.com/identicalsnowflake/hlrdb

library
  exposed-modules: HLRDB
  build-depends:
      base ^>= 4.9
    , base64-bytestring ^>= 1.0.0.1
    , bytestring ^>= 0.10.8.1
    , cryptonite ^>= 0.24
    , hashable ^>= 1.2.6.1
    , hedis ^>= 0.9.12
    , hlrdb-core ^>= 0.1 && < 0.2
    , lens ^>= 4.15.4
    , memory ^>= 0.14.8
    , profunctors ^>= 5.2.1
    , random ^>= 1.1
    , store ^>= 0.4.3.2
    , time-exts ^>= 3.0
    , unordered-containers ^>= 0.2.8.0
    , uuid-types ^>= 1.0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
      BangPatterns
    , DataKinds
    , DeriveGeneric
    , DeriveTraversable
    , GADTs
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RankNTypes
    , ScopedTypeVariables
    , TemplateHaskell
    , TypeOperators

  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fwarn-tabs

